--- a/d3vis/style.css
+++ b/d3vis/style.css
@@ -34,6 +34,7 @@ body {
     margin: auto;
 }
 
+
 label {
     display: block;
     position: static;
@@ -57,10 +58,18 @@ div {
 }
 
 .graph {
-
+    display: grid;
+    align-items: center;
     background-color: rgba(130, 129, 129, 0.226);
     padding: 20px;
+    width: 100%;
+    height: 100%;
+    justify-items: center;
     outline: solid;
-    caption-side: bottom;
-    text-align: center;
+}
+
+.graph > * {
+  grid-column-start: 1;
+  grid-row-start: 1;
+  align-self: center;
 }
